--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>homeschool.events</title>
+    <meta name="description" content="A curated database of homeschool events">
+    <meta property="og:title" content="homeschool.events">
+    <meta property="og:site_name" content="homeschool.events">
+    <meta property="og:url" content="https://homeschool.events">
+    <meta property="og:description" content="A curated database of homeschool events">
+    <meta property="og:type" content="website">
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
-      integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX"
-      crossorigin="anonymous"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
     />
   </head>
   <body class="h-100">
