feat: Add Typeform and actual database

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>homeschool.events</title>
-    <meta name="description" content="A curated database of homeschool events">
-    <meta property="og:title" content="homeschool.events">
-    <meta property="og:site_name" content="homeschool.events">
-    <meta property="og:url" content="https://homeschool.events">
-    <meta property="og:description" content="A curated database of homeschool events">
-    <meta property="og:type" content="website">
+    <meta
+      name="description"
+      content="A curated database of homeschool events"
+    />
+    <meta property="og:title" content="homeschool.events" />
+    <meta property="og:site_name" content="homeschool.events" />
+    <meta property="og:url" content="https://homeschool.events" />
+    <meta
+      property="og:description"
+      content="A curated database of homeschool events"
+    />
+    <meta property="og:type" content="website" />
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,5 +32,7 @@
       </strong>
     </noscript>
     <app-root></app-root>
+
+    <!-- <script src="https://www.google.com/recaptcha/api.js?render=6LdE3qkUAAAAAMdrfrIRC9GtY6y5YAqtJc28HbU9"></script> -->
   </body>
 </html>
