style: Improve theme!

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
