chore: Add Fathom Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
     <meta property="og:type" content="website" />
     <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
@@ -33,6 +36,24 @@
     </noscript>
     <app-root></app-root>
 
-    <!-- <script src="https://www.google.com/recaptcha/api.js?render=6LdE3qkUAAAAAMdrfrIRC9GtY6y5YAqtJc28HbU9"></script> -->
+    <!-- Fathom - simple website analytics - https://usefathom.com -->
+    <script>
+      ;(function(f, a, t, h, o, m) {
+        a[h] =
+          a[h] ||
+          function() {
+            ;(a[h].q = a[h].q || []).push(arguments)
+          }
+        ;(o = f.createElement('script')),
+          (m = f.getElementsByTagName('script')[0])
+        o.async = 1
+        o.src = t
+        o.id = 'fathom-script'
+        m.parentNode.insertBefore(o, m)
+      })(document, window, 'https://cdn.usefathom.com/tracker.js', 'fathom')
+      fathom('set', 'siteId', 'VNJGARSG')
+      fathom('trackPageview')
+    </script>
+    <!-- / Fathom -->
   </body>
 </html>
